--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#FE734C</color>
+    <color name="colorPrimaryDark">#c54221</color>
+    <color name="colorAccent">#000000</color>
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
+    <color name="light_orange">#FE734C</color>
+    <color name="light_orange_disable">#FEB8A5</color>
+    <color name="gray_orange">#F3F2F7</color>
+    <color name="gray">#C3C3C3</color>
+    <color name="strock_gray">#D0D0D0</color>
+    <color name="trans_black">#3C000000</color>
+    <color name="dark_gary">#B1B1B1</color>
 </resources>
