--- a/app/src/main/res/layout/activity_new_trip.xml
+++ b/app/src/main/res/layout/activity_new_trip.xml
@@ -56,6 +56,19 @@
             app:layout_constraintStart_toStartOf="@+id/tripNameInput"
             app:layout_constraintTop_toBottomOf="@+id/tripNameInput" />
 
+
+        <EditText
+            android:id="@+id/startPointSearchView"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/_35sdp"
+            android:layout_marginTop="@dimen/_4sdp"
+            android:background="@drawable/bg_edit_field"
+            android:drawableStart="@drawable/baseline_location_on_black_24"
+            android:paddingStart="@dimen/_5sdp"
+            app:layout_constraintEnd_toEndOf="@+id/tripNameInput"
+            app:layout_constraintStart_toStartOf="@+id/textView2"
+            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
         <TextView
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
@@ -67,23 +80,14 @@
             app:layout_constraintStart_toStartOf="@+id/startPointSearchView"
             app:layout_constraintTop_toBottomOf="@+id/startPointSearchView" />
 
-        <SearchView
-            android:id="@+id/startPointSearchView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_4sdp"
-            android:background="@drawable/bg_edit_field"
-            app:layout_constraintEnd_toEndOf="@+id/tripNameInput"
-            app:layout_constraintStart_toStartOf="@+id/textView2"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
-
-        <SearchView
+        <EditText
             android:id="@+id/endPointSearchView"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/_35sdp"
             android:layout_marginTop="@dimen/_4sdp"
             android:background="@drawable/bg_edit_field"
+            android:drawableStart="@drawable/baseline_location_on_black_24"
+            android:paddingStart="@dimen/_5sdp"
             app:layout_constraintEnd_toEndOf="@+id/startPointSearchView"
             app:layout_constraintStart_toStartOf="@+id/textView4"
             app:layout_constraintTop_toBottomOf="@+id/textView4" />
@@ -106,10 +110,8 @@
             android:layout_marginTop="@dimen/_16sdp"
             android:background="@color/white"
             android:contentDescription="@string/calender_image"
-            android:src="@drawable/twotone_calendar_today_black_48"
-            app:layout_constraintEnd_toStartOf="@+id/timeBtn"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
+            android:src="@drawable/twotone_calendar_today_black_36"
+            app:layout_constraintStart_toStartOf="@+id/textView5"
             app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
         <ImageButton
@@ -118,17 +120,15 @@
             android:layout_height="wrap_content"
             android:background="@color/white"
             android:contentDescription="@string/time_image"
-            android:src="@drawable/twotone_more_time_black_48"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/calender_btn"
+            android:src="@drawable/twotone_more_time_black_36"
+            app:layout_constraintStart_toStartOf="@+id/textView6"
             app:layout_constraintTop_toTopOf="@+id/calender_btn" />
 
         <TextView
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_16sdp"
+            android:layout_marginTop="@dimen/_4sdp"
             android:text="@string/repeating"
             android:textSize="@dimen/_14sdp"
             android:textStyle="bold"
@@ -171,10 +171,10 @@
             android:id="@+id/add_trip_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_24sdp"
             android:text="@string/add_new_trip_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/repeating_spinner"
-            android:layout_marginTop="@dimen/_24sdp"/>
+            app:layout_constraintTop_toBottomOf="@+id/repeating_spinner" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
