--- a/app/src/main/res/layout/trip_item_view.xml
+++ b/app/src/main/res/layout/trip_item_view.xml
@@ -14,8 +14,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="202dp"
-        android:background="@color/gray_orange"
+        android:layout_height="250dp"
+        android:background="@drawable/images"
         android:padding="@dimen/_4sdp"
         android:weightSum="6">
 
@@ -27,7 +27,23 @@
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="130dp"
+                android:layout_marginLeft="300dp"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/button2"
+                    android:layout_width="32dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="40dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/ic_baseline_add_box_24" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="5dp"
                 android:layout_weight="1"
@@ -42,29 +58,20 @@
                     android:textSize="@dimen/_20sdp"
                     android:textStyle="bold" />
 
-                <Button
-                    android:id="@+id/button2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="300dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/ic_baseline_post_add_24"
-                    android:backgroundTint="@color/gray_orange" />
-
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="150dp"
                 android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:layout_weight="1"
                 android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/imageView2"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="80dp"
                     android:layout_marginRight="10dp"
                     android:layout_weight="1"
 
@@ -92,7 +99,7 @@
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_weight="1"
@@ -131,8 +138,9 @@
 
                     android:layout_marginLeft="200dp"
                     android:layout_weight="1"
-                    android:background="@drawable/ic_baseline_note_24"
+                    android:background="@drawable/ic_baseline_sticky_note_2_24"
                     android:backgroundTint="@color/gray_orange" />
+
             </LinearLayout>
 
             <Button
