--- a/app/src/main/res/layout/activity_new_trip.xml
+++ b/app/src/main/res/layout/activity_new_trip.xml
@@ -16,27 +16,12 @@
         android:focusable="true"
         android:focusableInTouchMode="true" >
 
-        <TextView
-            android:id="@+id/tvTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="@string/new_trip"
-            android:textColor="@color/light_orange"
-            android:textSize="@dimen/_15ssp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="MissingPrefix" />
-
 
         <EditText
             android:id="@+id/tripNameInput"
             android:layout_width="0dp"
             android:layout_height="@dimen/_35sdp"
             android:layout_marginStart="@dimen/_16sdp"
-            android:layout_marginTop="@dimen/_16sdp"
             android:layout_marginEnd="@dimen/_16sdp"
             android:autofillHints=""
             android:background="@drawable/bg_edit_field"
@@ -48,7 +33,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
+            tools:layout_editor_absoluteY="63dp"
             tools:targetApi="o" />
 
         <TextView
@@ -171,8 +156,8 @@
             android:text="@string/trip_type"
             android:textSize="@dimen/_14ssp"
             android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@+id/tvTitle"
-            app:layout_constraintTop_toTopOf="@+id/textView5" />
+            app:layout_constraintTop_toTopOf="@+id/textView5"
+            tools:layout_editor_absoluteX="243dp" />
 
         <Spinner
             android:id="@+id/trip_type"
@@ -189,42 +174,34 @@
             android:id="@+id/btnAddNote"
             android:layout_width="65dp"
             android:layout_height="51dp"
-            android:layout_marginTop="36dp"
+            android:layout_marginTop="@dimen/_4sdp"
             android:background="@drawable/ic_baseline_note_add_24"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.478"
-            app:layout_constraintStart_toEndOf="@+id/timeBtn"
+            app:layout_constraintStart_toStartOf="@+id/textView"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
 
         <Button
             android:id="@+id/add_trip_btn"
             android:layout_width="136dp"
             android:layout_height="50dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="@dimen/_16sdp"
             android:layout_marginBottom="21dp"
             android:background="@drawable/btnsignin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_24sdp"
             android:text="@string/add_new_trip_button"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/trip_type"
+            app:layout_constraintTop_toBottomOf="@+id/btnAddNote"
             app:layout_constraintVertical_bias="0.285" />
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="@dimen/_16sdp"
             android:text="@string/Add_Note"
             android:textSize="18sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.689"
-            app:layout_constraintStart_toEndOf="@+id/textView3"
-            app:layout_constraintTop_toBottomOf="@+id/endPointSearchView" />
+            app:layout_constraintStart_toStartOf="@+id/repeating_spinner"
             app:layout_constraintTop_toBottomOf="@+id/repeating_spinner" />
 
         <TextView
