--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -4,12 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimaryDark"
     tools:context=".RegistrationActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/gray_orange">
+        android:background="@color/colorPrimaryDark">
 
         <ImageView
             android:id="@+id/imageView"
@@ -27,7 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_16sdp"
-            android:background="@drawable/bg_top_shap_10"
+            android:background="@color/colorPrimaryDark"
             android:gravity="center_horizontal"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -42,8 +43,9 @@
                 android:layout_marginTop="@dimen/_10sdp"
                 android:layout_marginBottom="@dimen/_10sdp"
                 android:text="@string/sign_up_space"
-                android:textColor="@color/light_orange"
-                android:textSize="@dimen/_15ssp"
+                android:textColor="@color/light_orange_disable"
+                android:textSize="30sp"
+                android:textStyle="bold"
                 tools:ignore="MissingPrefix" />
 
             <EditText
@@ -52,7 +54,7 @@
                 android:layout_height="@dimen/_35sdp"
                 android:layout_marginLeft="@dimen/_10sdp"
                 android:layout_marginRight="@dimen/_10sdp"
-                android:background="@drawable/bg_edit_field"
+                android:background="@color/light_orange_disable"
                 android:hint="@string/full_name"
                 android:imeOptions="actionNext"
                 android:inputType="textPersonName|textCapWords"
@@ -67,7 +69,7 @@
                 android:layout_marginLeft="@dimen/_10sdp"
                 android:layout_marginTop="@dimen/_8sdp"
                 android:layout_marginRight="@dimen/_10sdp"
-                android:background="@drawable/bg_edit_field"
+                android:background="@color/light_orange_disable"
                 android:hint="@string/email"
                 android:imeOptions="actionNext"
                 android:inputType="textEmailAddress"
@@ -78,11 +80,11 @@
             <EditText
                 android:id="@+id/edPassword"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_35sdp"
+                android:layout_height="42dp"
                 android:layout_marginLeft="@dimen/_10sdp"
                 android:layout_marginTop="@dimen/_8sdp"
                 android:layout_marginRight="@dimen/_10sdp"
-                android:background="@drawable/bg_edit_field"
+                android:background="@color/light_orange_disable"
                 android:hint="@string/password"
                 android:imeOptions="actionNext"
                 android:inputType="textPassword"
@@ -97,7 +99,7 @@
                 android:layout_marginLeft="@dimen/_10sdp"
                 android:layout_marginTop="@dimen/_8sdp"
                 android:layout_marginRight="@dimen/_10sdp"
-                android:background="@drawable/bg_edit_field"
+                android:background="@color/light_orange_disable"
                 android:hint="@string/confirm_password"
                 android:imeOptions="actionGo"
                 android:inputType="textPassword"
@@ -110,12 +112,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_15sdp"
-                android:backgroundTint="@color/light_orange"
+                android:backgroundTint="@color/light_orange_disable"
                 android:gravity="center_horizontal"
                 android:padding="@dimen/_10sdp"
                 android:text="@string/sign_up_space"
                 android:textColor="@color/white"
-                android:textSize="@dimen/_12ssp"
+                android:textSize="14sp"
+                android:textStyle="bold"
                 tools:ignore="MissingPrefix" />
 
             <LinearLayout
@@ -131,7 +134,8 @@
                     android:layout_marginBottom="@dimen/_10sdp"
                     android:text="@string/already_have_an_account"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/_11ssp"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
                     tools:ignore="MissingPrefix" />
 
                 <TextView
@@ -142,8 +146,9 @@
                     android:layout_marginEnd="@dimen/_10sdp"
                     android:layout_marginBottom="@dimen/_10sdp"
                     android:text="@string/login"
-                    android:textColor="@color/light_orange"
-                    android:textSize="@dimen/_11ssp"
+                    android:textColor="@color/light_orange_disable"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
                     tools:ignore="MissingPrefix" />
             </LinearLayout>
         </LinearLayout>
