--- a/app/src/main/res/layout/trip_item_view.xml
+++ b/app/src/main/res/layout/trip_item_view.xml
@@ -12,9 +12,9 @@
 
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="393dp"
         android:layout_height="wrap_content"
-        android:background="@color/gray_orange"
+        android:background="@color/gray"
         android:orientation="vertical"
         android:padding="@dimen/_4sdp">
 
