--- a/app/src/main/res/layout/activity_new_trip.xml
+++ b/app/src/main/res/layout/activity_new_trip.xml
@@ -9,12 +9,12 @@
     tools:context=".NewTripActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/my_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/_16sdp"
-        android:id="@+id/my_layout"
         android:focusable="true"
-        android:focusableInTouchMode="true" >
+        android:focusableInTouchMode="true"
+        android:paddingBottom="@dimen/_16sdp">
 
 
         <EditText
@@ -22,6 +22,7 @@
             android:layout_width="0dp"
             android:layout_height="@dimen/_35sdp"
             android:layout_marginStart="@dimen/_16sdp"
+            android:layout_marginTop="@dimen/_16sdp"
             android:layout_marginEnd="@dimen/_16sdp"
             android:autofillHints=""
             android:background="@drawable/bg_edit_field"
@@ -33,7 +34,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="63dp"
+            app:layout_constraintTop_toTopOf="parent"
             tools:targetApi="o" />
 
         <TextView
@@ -111,8 +112,8 @@
             android:id="@+id/dateTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/_12ssp"
             android:layout_marginStart="@dimen/_4sdp"
+            android:textSize="@dimen/_12ssp"
             app:layout_constraintBottom_toBottomOf="@+id/calender_btn"
             app:layout_constraintStart_toEndOf="@+id/calender_btn"
             app:layout_constraintTop_toTopOf="@+id/calender_btn" />
@@ -156,18 +157,20 @@
             android:text="@string/trip_type"
             android:textSize="@dimen/_14ssp"
             android:textStyle="bold"
-            app:layout_constraintTop_toTopOf="@+id/textView5"
-            tools:layout_editor_absoluteX="243dp" />
+            app:layout_constraintStart_toStartOf="@+id/trip_type"
+            app:layout_constraintTop_toTopOf="@+id/textView5" />
 
         <Spinner
             android:id="@+id/trip_type"
             style="@android:style/Widget.Holo.Light.Spinner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_4sdp"
+            android:layout_marginTop="4dp"
             android:backgroundTint="@color/black"
             android:entries="@array/trip_options"
-            app:layout_constraintStart_toStartOf="@+id/textView6"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/repeating_spinner"
             app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
         <Button
@@ -181,17 +184,18 @@
 
         <Button
             android:id="@+id/add_trip_btn"
-            android:layout_width="136dp"
-            android:layout_height="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_16sdp"
             android:layout_marginBottom="21dp"
             android:background="@drawable/btnsignin"
             android:text="@string/add_new_trip_button"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.452"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btnAddNote"
-            app:layout_constraintVertical_bias="0.285" />
+            app:layout_constraintVertical_bias="0.19" />
 
         <TextView
             android:id="@+id/textView"
@@ -208,8 +212,8 @@
             android:id="@+id/timeTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/_12ssp"
             android:layout_marginStart="@dimen/_4sdp"
+            android:textSize="@dimen/_12ssp"
             app:layout_constraintBottom_toBottomOf="@+id/timeBtn"
             app:layout_constraintStart_toEndOf="@+id/timeBtn"
             app:layout_constraintTop_toTopOf="@+id/timeBtn" />
