--- a/app/src/main/res/layout/fragment_list_trip.xml
+++ b/app/src/main/res/layout/fragment_list_trip.xml
@@ -6,4 +6,4 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layoutManager="LinearLayoutManager"
-    tools:context=".Fragments.upcoming.TripsViewFragment" />
+    tools:context=".Fragments.TripsViewFragment" />
