--- a/app/src/main/res/layout/trip_item_view.xml
+++ b/app/src/main/res/layout/trip_item_view.xml
@@ -2,6 +2,7 @@
 
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="@dimen/_10sdp"
@@ -12,145 +13,138 @@
     card_view:cardCornerRadius="@dimen/_8sdp">
 
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/images"
-        android:padding="@dimen/_4sdp"
         android:weightSum="6">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:weightSum="3">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="130dp"
-                android:layout_marginLeft="300dp"
-                android:layout_weight="1"
-                android:orientation="horizontal">
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="@dimen/_25sdp"
+            android:layout_height="@dimen/_25sdp"
+            android:layout_marginTop="@dimen/_8sdp"
+            android:layout_marginEnd="@dimen/_8sdp"
+            android:background="@drawable/ic_baseline_add_box_24"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintTop_toTopOf="parent" />
 
-                <Button
-                    android:id="@+id/button2"
-                    android:layout_width="32dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="40dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/ic_baseline_add_box_24" />
-            </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="5dp"
-                android:layout_weight="1"
-                android:orientation="horizontal">
+        <TextView
+            android:id="@+id/tripName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_16sdp"
+            android:textColor="#0C0C0C"
+            android:textSize="@dimen/_16ssp"
+            android:textStyle="bold"
+            card_view:layout_constraintStart_toStartOf="@+id/imageView2"
+            card_view:layout_constraintTop_toTopOf="parent"
+            tools:text="Trip Name" />
 
-                <TextView
-                    android:id="@+id/tripName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
 
-                    android:textColor="#0C0C0C"
-                    android:textSize="@dimen/_20sdp"
-                    android:textStyle="bold" />
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_20sdp"
+            card_view:layout_constraintStart_toStartOf="@+id/btnStart"
+            card_view:layout_constraintTop_toBottomOf="@+id/tripName"
+            card_view:srcCompat="@drawable/ic_baseline_location_on_24" />
 
-            </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="150dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="5dp"
-                android:layout_weight="1"
-                android:orientation="horizontal">
+        <TextView
+            android:id="@+id/startPoint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginBottom="@dimen/_4sdp"
+            android:textColor="#090909"
+            android:textSize="@dimen/_14ssp"
+            android:textStyle="bold"
+            card_view:layout_constraintBottom_toTopOf="@+id/endPoint"
+            card_view:layout_constraintStart_toEndOf="@+id/imageView2"
+            card_view:layout_constraintTop_toTopOf="@+id/imageView2"
+            tools:text="startPoint" />
 
-                <ImageView
-                    android:id="@+id/imageView2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="80dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_weight="1"
+        <TextView
+            android:id="@+id/endPoint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#0E0E0E"
+            android:textSize="@dimen/_14ssp"
+            android:textStyle="bold"
+            card_view:layout_constraintBottom_toBottomOf="@+id/imageView2"
+            card_view:layout_constraintStart_toStartOf="@+id/startPoint"
+            card_view:layout_constraintTop_toBottomOf="@+id/startPoint"
+            tools:text="endPoint" />
 
-                    card_view:srcCompat="@drawable/ic_baseline_location_on_24" />
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_12sdp"
+            card_view:layout_constraintStart_toStartOf="@+id/btnStart"
+            card_view:layout_constraintTop_toBottomOf="@+id/endPoint"
+            card_view:srcCompat="@drawable/ic_baseline_alarm_24" />
 
-                <TextView
-                    android:id="@+id/startPoint"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
 
-                    android:textColor="#090909"
-                    android:textSize="@dimen/_16sdp"
-                    android:textStyle="bold" />
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_12sdp"
+            card_view:layout_constraintStart_toStartOf="@+id/btnStart"
+            card_view:layout_constraintTop_toBottomOf="@+id/imageView3"
+            card_view:srcCompat="@drawable/baseline_pending_actions_24" />
 
-                <TextView
-                    android:id="@+id/endPoint"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="10dp"
-                    android:textColor="#0E0E0E"
-                    android:textSize="@dimen/_16sdp"
-                    android:textStyle="bold" />
+        <TextView
+            android:id="@+id/dateTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            card_view:layout_constraintBottom_toBottomOf="@+id/imageView3"
+            card_view:layout_constraintStart_toStartOf="@+id/endPoint"
+            card_view:layout_constraintTop_toTopOf="@+id/imageView3"
+            tools:text="15/10/2010 08:30 AM" />
 
-            </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_weight="1"
-                android:orientation="horizontal">
+        <Button
+            android:id="@+id/btn_Note"
+            android:layout_width="@dimen/_25sdp"
+            android:layout_height="@dimen/_25sdp"
+            android:layout_marginEnd="@dimen/_8sdp"
+            android:layout_marginBottom="@dimen/_8sdp"
+            android:background="@drawable/ic_baseline_sticky_note_2_24"
+            android:backgroundTint="@color/gray_orange"
+            card_view:layout_constraintBottom_toTopOf="@+id/btnStart"
+            card_view:layout_constraintEnd_toEndOf="parent" />
 
-                <ImageView
-                    android:id="@+id/imageView3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="10dp"
-                    card_view:srcCompat="@drawable/ic_baseline_alarm_24" />
+        <Button
+            android:id="@+id/btnStart"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_8sdp"
+            android:layout_marginTop="@dimen/_12sdp"
+            android:layout_marginEnd="@dimen/_8sdp"
+            android:layout_marginBottom="@dimen/_8sdp"
+            android:backgroundTint="#F9690E"
+            android:text="@string/btn_Start"
+            android:textColor="#F6F4FA"
+            card_view:layout_constraintBottom_toBottomOf="parent"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
-                <TextView
-                    android:id="@+id/textViewtime"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="25dp" />
+        <TextView
+            android:id="@+id/statusView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            card_view:layout_constraintBottom_toBottomOf="@+id/imageView4"
+            card_view:layout_constraintStart_toStartOf="@+id/dateTextView"
+            card_view:layout_constraintTop_toTopOf="@+id/imageView4"
+            tools:text="upcoming or forgotten" />
 
-                <ImageView
-                    android:id="@+id/imageView4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="10dp"
-                    card_view:srcCompat="@drawable/ic_baseline_date_range_24" />
 
-                <TextView
-                    android:id="@+id/textViewdate"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1" />
-
-                <Button
-                    android:id="@+id/btn_Note"
-                    android:layout_width="46dp"
-                    android:layout_height="37dp"
-
-                    android:layout_marginLeft="200dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/ic_baseline_sticky_note_2_24"
-                    android:backgroundTint="@color/gray_orange" />
-
-            </LinearLayout>
-
-            <Button
-                android:id="@+id/btnStart"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="#F9690E"
-                android:text="@string/btn_Start"
-                android:textColor="#F6F4FA" />
-        </LinearLayout>
-
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
